# isocore

./: .gitignore  Cargo.toml  README.md  SPEC.md  flake.nix
apps/app_consumer/: Cargo.toml
apps/app_consumer/src/: lib.rs
apps/app_kv/: Cargo.toml
apps/app_kv/src/: lib.rs
apps/app_logger/: Cargo.toml
apps/app_logger/src/: lib.rs
apps/app_provider/: Cargo.toml
apps/app_provider/src/: lib.rs
crates/exorun/: Cargo.toml
crates/exorun/docs/: 00-wat-guide.md  01-bind-method-cleanup.md  02-rest.md  03-finish.md  04-notes.md  05-client-transport.md  06-next-steps.md
crates/exorun/src/: bind.rs  builder.rs  client.rs  context.rs  instance.rs  ledger.rs  lib.rs  mock_transport.rs  peer.rs  proxy.rs  runtime.rs  system.rs  tests.rs  transport.rs
crates/exorun/src/host/: instance.rs  kv.rs  logger.rs  mod.rs  wasi.rs
crates/exorun/src/local/: builder.rs  instance.rs  mod.rs
crates/exorun/src/peer/: mod.rs  tests.rs
crates/exorun/src/system/: mod.rs  target.rs  wasi.rs
crates/exorun/tests/: component_exports.rs  integration_suite.rs  test_builder_validation.rs  test_ledger_bidirectional.rs
crates/isocore/: Cargo.toml
crates/isocore/src/: lib.rs
crates/isopack/: Cargo.toml
crates/isopack/docs/: 00-typestate-removal-proposal.md
crates/isopack/src/: cursor.rs  decoder.rs  encoder.rs  lib.rs  macros.rs  tests.rs  traits.rs  types.rs
crates/isorpc/: Cargo.toml
crates/isorpc/docs/: 00-pick-up.md  01-working-on.md
crates/isorpc/src/: decode.rs  encode.rs  lib.rs  message.rs  rpc.rs  tests.rs  types.rs
crates/isorun/: Cargo.toml  README.md
crates/isorun/docs/: 00-plan.md  01-notes.md  02-remotes.md  03-boundaries.md  04-interfaces.md  05-do-the-following.md
crates/isorun/src/: builder.rs  context.rs  handles.rs  instance.rs  integration.rs  introspect.rs  lib.rs  linker.rs  rpc.rs  runtime.rs  traits.rs
crates/isorun/src/system/: local_channel.rs  mod.rs  wasi_fs.rs
crates/isorun/tests/: integration_suite.rs
crates/isorun/tests/fixtures/: app_consumer.wasm  app_kv.wasm  app_logger.wasm  app_provider.wasm
crates/meular/: Cargo.toml
crates/meular/src/: main.rs
crates/neopack/: Cargo.toml  LICENSE
crates/neopack-derive/: Cargo.toml
crates/neopack-derive/src/: lib.rs
crates/neopack/src/: lib.rs  tests.rs
crates/neorpc/: Cargo.toml
crates/neorpc/docs/: 00-draft-and-goals.md  01-story.md  02-story.md  03-useful-commands.md
crates/neorpc/src/: codec.rs  error.rs  flag.rs  frame.rs  lib.rs  tests.rs
crates/neorun/: Cargo.toml
crates/neorun/docs/: 00-the-void.md  01-the-switchboard.md
crates/neorun/src/: builder.rs  context.rs  handles.rs  instance.rs  introspect.rs  lib.rs  linker.rs  rpc.rs  runtime.rs  tests.rs  traits.rs
docs/: 00-design.md
scripts/: build_apps.sh  deploy.sh  test_apps.sh  test_exorun.sh
wit/: host.wit  meta-runtime.wit  test.wit  world.wit
