[workspace]
members = ["crates/*"]
exclude = ["apps/*", "crates/tmp/*"]
resolver = "3"

[workspace.dependencies]
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
anyhow = "1.0"
async-trait = "0.1.89"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
