[package]
name = "exorun"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
neopack = { path = "../neopack" }
neorpc = { path = "../neorpc" }
dashmap = { workspace = true }
anymap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
