[package]
name = "isorun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
anymap = "0.12.1"
async-trait = "0.1.89"
isopack = { path = "../isopack" }
tokio = "1.48.0"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
