[package]
name = "isorun"
version = "0.1.0"
edition = "2024"

[dependencies]
# NOTE: For shared dependencies, add to [workspace.dependencies] in root Cargo.toml and use { workspace = true }
anyhow = { workspace = true }
anymap = "0.12.1"
async-trait = "0.1.89"
# isopack = { path = "../isopack" }
# isorpc = { path = "../isorpc" }
tokio = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
