[package]
name = "neopack"
version = "1.2.1"
edition = "2024"
description = "neopack is a small, opinionated library for binary tlv serialization"
license = "MIT"
repository = "https://github.com/slightknack/isocore"
authors = ["Isaac Clayton (slightknack) <hi@isaac.sh>"]
keywords = ["serialization", "binary", "tlv", "no-std"]
categories = ["encoding", "no-std::no-alloc"]

[features]
default = ["derive"]
derive = ["dep:neopack-derive"]

[dependencies]
neopack-derive = { version = "1", path = "../neopack-derive", optional = true }
